# LogHunterWEB

./: .gitignore  README.md  pom.xml
BackendRust/: Cargo.toml
BackendRust/src/: main.rs
pova_log/: creatore.py
pova_log/server_logs_chaos/: server.py
src/main/java/com/loghunter/: LogHunterApplication.java  SearchWebSocketHandler.java  SecurityConfig.java  WebSocketConfig.java
src/main/resources/static/: index.html
