[package]
name = "loghunter_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
scraper = "0.18"
chrono = "0.4"
regex = "1"
futures = "0.3"
num_cpus = "1"
url = "2"
memchr = "2.7"
flate2 = "1.0"
tar = "0.4"    
zip = "0.6"    

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true